<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FingerPaintApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="save_btn">Save</string>
	<string name="email_btn">Email</string>
	<string name="reset_btn">Reset</string>
	<string name="exit_btn">Exit</string>
	
	<string name="palette">Palette</string>
	<string name="shapes">Shapes</string>
	
    <string name="menu_exit">Exit</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_erase">Erasing</string>
    <string name="menu_mms">MMS</string>
	
</resources>
