<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="?android:attr/buttonBarStyle"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:layout_gravity="start"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/save_btn" />

    <Button
        android:id="@+id/email_btn"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/email_btn" />

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/reset_btn" />

    <Button
        android:id="@+id/exit_btn"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="end"
        android:text="@string/exit_btn" />

</LinearLayout>